Initial version: PDF merge/split connector with operations API
- Implemented 5 PDF operations: merge, split by page/range/bookmark/size
- Docker deployment with SaaS cluster integration
- Comprehensive documentation and security templates
- Element template for Camunda 8.8

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,20 @@ build/
 ### VS Code ###
 .vscode/
 
+# Maven build artifacts
+dependency-reduced-pom.xml
+
+# Environment and secrets - NEVER commit credentials
+*.env
+.env
+.env.*
+application.properties
+application-*.properties
+docker-compose.yml
+
+# OS specific
+Thumbs.db
+
 # environment
 .env
 request*.json
