Chore: fix gitleaks config, update action usage; Align Docker base to 8.8.3; Sanitize docker-compose.yml and remove version warning

--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -16,6 +16,4 @@ jobs:
 
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
-        with:
-          config-path: .gitleaks.toml
-          args: --redact --verbose
+        # v2 auto-discovers .gitleaks.toml and produces SARIF/artifact
