CI: upload JaCoCo HTML report as artifact (target/site/jacoco)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,11 @@ jobs:
         name: test-results
         path: target/surefire-reports/
 
+    - name: Upload JaCoCo HTML coverage report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: jacoco-report
+        path: target/site/jacoco/
+        if-no-files-found: warn
+
